# question-and-answer-tool

./: .gitignore  README.md
.github/workflows/: ci-java.yaml  ci.yaml  maven-dependency.yaml  tbls.yaml
apps/: .env.sample  .tbls.yml  Makefile  docker-compose.yml  flyway.conf.actions  pom.xml  sonar-project.properties
apps/code-coverage-java/: pom.xml
apps/common-libs-java/: pom.xml
apps/common-libs-java/src/main/java/com/qa/common_libs/bean_provider/: DefaultRestTemplate.java
apps/common-libs-java/src/main/java/com/qa/common_libs/dto/qa/: QACreateRequest.java  QADTO.java
apps/common-libs-java/src/main/java/com/qa/common_libs/dto/tool/: ToolCreateRequest.java  ToolDTO.java
apps/common-libs-java/src/main/java/com/qa/common_libs/entity/: AbstractTimeContainEntity.java  EntityStamper.java  Timestamps.java
apps/common-libs-java/src/main/java/com/qa/common_libs/exception/: AbstractAppExceptionBase.java  AbstractUserErrorExceptionBase.java  ErrorData.java  InternalServerErrorException.java  ResourceNotFoundException.java  ValidateException.java
apps/common-libs-java/src/main/java/com/qa/common_libs/exception/handler/: DefaultRestControllerAdvice.java
apps/common-libs-java/src/main/java/com/qa/common_libs/generator/: DatetimeGenerator.java
apps/common-libs-java/src/main/java/com/qa/common_libs/validator/: VOValidator.java
apps/common-libs-java/src/main/java/com/qa/common_libs/vo/: ValueObject.java
apps/dev-config/localstack/init/: create_sqs.sh
apps/dev-config/postgresql/init/: sonarqube.sql
apps/qa-tool/: Dockerfile  pom.xml
apps/qa-tool/src/main/java/com/qa/tool/: Application.java
apps/qa-tool/src/main/java/com/qa/tool/domain/queue/config/: AmazonSQSConfig.java  AmazonSQSProperties.java  AwsConfig.java
apps/qa-tool/src/main/java/com/qa/tool/domain/queue/model/: AmazonSQSService.java
apps/qa-tool/src/main/java/com/qa/tool/domain/queue/model/vo/: UpsertIdList.java
apps/qa-tool/src/main/java/com/qa/tool/domain/tool/model/: ToolEndpointConfig.java  ToolQAEntity.java  ToolQAEntityConverter.java  ToolQAEntityRepository.java  ToolQAService.java
apps/qa-tool/src/main/java/com/qa/tool/domain/tool/model/vo/: ToolAnswerConverter.java  ToolAnswerValue.java  ToolQuestionConverter.java  ToolQuestionValue.java
apps/qa-tool/src/main/java/com/qa/tool/presentation/: ToolQAController.java
apps/qa-tool/src/main/java/com/qa/tool/usecase/: ToolQAUseCase.java
apps/qa-tool/src/main/java/com/qa/tool/usecase/impl/: ToolQAUseCaseImpl.java
apps/qa-tool/src/main/resources/: application.yml
apps/qa-tool/src/main/resources/db/migration/: V0_0_1__CreateTables.sql
apps/qa-tool/src/test/java/com/qa/tool/domain/tool/model/vo/: ToolAnswerValueTest.java  ToolQuestionValueTest.java
apps/qa-tool/src/test/java/com/qa/tool/it/: AmazonSQSTest.java  EnableTestContainerContextCustomizerFactory.java  ToolQAControllerTest.java
apps/qa-tool/src/test/resources/: application.yml
apps/tool-manager/: Dockerfile  pom.xml
apps/tool-manager/src/main/java/com/qa/tool_manager/: ToolManagerApplication.java
apps/tool-manager/src/main/java/com/qa/tool_manager/domain/tool/model/: ToolEntity.java  ToolEntityConverter.java  ToolEntityRepository.java  ToolService.java
apps/tool-manager/src/main/java/com/qa/tool_manager/domain/tool/model/vo/: ToolDescriptionConverter.java  ToolDescriptionValue.java  ToolNameConverter.java  ToolNameValue.java
apps/tool-manager/src/main/java/com/qa/tool_manager/presentation/: ToolController.java
apps/tool-manager/src/main/java/com/qa/tool_manager/usecase/: ToolUseCase.java
apps/tool-manager/src/main/java/com/qa/tool_manager/usecase/impl/: ToolUseCaseImpl.java
apps/tool-manager/src/main/resources/: application.yml
apps/tool-manager/src/main/resources/db/migration/: V0_0_1__CreateTables.sql
apps/tool-manager/src/test/java/com/qa/tool_manager/domain/tool/model/vo/: ToolDescriptionValueTest.java  ToolNameValueTest.java
apps/tool-manager/src/test/java/com/qa/tool_manager/infrastructure/: ToolEntityRepositoryStub.java
apps/tool-manager/src/test/java/com/qa/tool_manager/it/: ToolControllerTest.java
apps/tool-manager/src/test/resources/: application.yml
apps/vectorizer/: .gitignore  Dockerfile  pyproject.toml
apps/vectorizer/src/config/: __init__.py  application_properties.py
apps/vectorizer/src/domain/question/: __init__.py  sqs_service.py
apps/vectorizer/src/domain/question/model/: __init__.py  question.py
apps/vectorizer/src/domain/search/: __init__.py
apps/vectorizer/src/domain/vectorizer/: __init__.py
design/: usecase.pu
design/db/schema/: README.md  public.flyway_schema_history_qa.md  public.flyway_schema_history_tool_manager.md  public.qa.md  public.tool.md  schema.json
design/dependency-graph/: java.puml
