[tool.poetry]
name = "vectorizer"
version = "0.0.1"
description = "this is sample project for use poetry."
authors = ["sUeharaE4"]

[tool.taskipy.tasks]
start = { cmd = "uvicorn src.main:app --reload", help = "launch server" }
test = { cmd = "pytest -vv --durations=0 --log-cli-level=10", help = "runs all tests" }
test_cov = { cmd = "coverage run -m pytest -vv --durations=0 --junitxml=build/tests/result.xml --cov=tests --cov-report=xml:build/tests/coverage.xml --cov-report=html:build/tests/htmlcov --html=build/tests/report.html", help = "runs all tests and make coverage report" }
sphinx = { cmd = "task sphinx_apidoc && task sphinx_build", help = "make sphinx doc" }
check_style = { cmd = "task check_flake8 && task check_flake8_with_output && task check_mypy", help = "check code style" }
check_complexity = { cmd = "cd src && docker run --rm --env CODECLIMATE_CODE=`pwd` --env CODECLIMATE_DEBUG=1 -v `pwd`:/code -v /var/run/docker.sock:/var/run/docker.sock -v /tmp/cc:/tmp/cc codeclimate/codeclimate analyze", help = "check_code complexity use docker image of code climate. this command needs docker." }
sphinx_apidoc = { cmd = "sphinx-apidoc -M -f -o ./build/docs/source ./src", help = "sub commands for make sphinx doc" }
sphinx_build = { cmd = "sphinx-build -b html ./build/docs/source/ ./build/docs/build/", help = "sub commands for make sphinx doc" }
check_flake8 = { cmd = "flake8 ./src --docstring-convention numpy", help= "sub commands for check_style" }
check_flake8_with_output = { cmd = "flake8 ./src --docstring-convention numpy --format=pylint --output=./build/check_style/flake8.txt", help= "sub commands for check_style" }
check_mypy = { cmd = "mypy tests ./src --config-file ./mypy.ini", help= "sub commands for check_style" }

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3

[tool.poetry.dependencies]
python = "^3.11"
taskipy = "^1.8.1"
boto3 = "^1.28.30"
elasticsearch = "^8.9.0"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
numpy = "^1.25.2"
pydantic-settings = "^2.0.3"
types-requests = "^2.31.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
mypy = "^1.5.1"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.15.0"
pytest-html = "^3.2.0"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
isort = "^5.12.0"
sphinx = "^7.2.3"
sphinx-autodoc-typehints = "^1.24.0"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
